# RouteOpt

./: .gitignore  README.md  build.py
Application/CVRP/CVRP/: CMakeLists.txt  Makefile  RouteOpt_CVRP  export.txt
Application/CVRP/CVRP/idx/: 3-1+2+3.ins  OldIns.ins  PX18_left.ins  Vrp-Set-XML100_test_100_opt.ins  Vrp-Set-XML100_test_120_opt.ins  Vrp-Set-XML100_test_150_opt.ins  cvrp_120_200_opt.ins  cvrp_150_200_opt.ins  cvrp_180_200_opt.ins  cvrp_200_200_opt.ins  cvrp_2h_solvable.ins  cvrp_kill_enumeration.ins  cvrp_lb_sep_16.ins  cvrp_lib.ins  cvrp_open.ins  cvrp_s2_1_in_2h.ins  cvrp_s2_1_out_2h.ins  cvrp_s2_2_in_2h.ins  cvrp_s2_2_out_2h.ins  cvrp_testing_150.ins  cvrp_testing_150_1.001.ins  cvrp_training_150.ins  cvrp_tw_ub.ins  generateIdxIns.py  new_selected_tw_lb.ins  selected_cvrp_lb.ins  selected_tw_lb.ins  split_training_instances.ins  test_CR200-6-10_UB.ins  tw_lib_lb.ins  tw_test_160.ins  tw_test_180.ins  tw_test_200.ins  tw_test_250.ins
Application/CVRP/CVRP/include/: BBNODE.hpp  CONFIG.hpp  CUTS.hpp  CVRP.hpp  Experiment.hpp  FindInsByCertainSetting.hpp  InstanceData.hpp  MACRO.hpp  ML.hpp  ML2.hpp  ML3.hpp  VRPTW.hpp  solver.hpp  techniqueControl.hpp  templateFunctors.hpp
Application/CVRP/CVRP/include/bc_model/: bc_model_index.hpp
Application/CVRP/CVRP/include/branching/: best_bound_first_branching.hpp  branching.hpp  depth_first_branching.hpp  dynamics.hpp
Application/CVRP/CVRP/include/config/: config.hpp  macro.hpp  setting2.hpp  technique_control.hpp
Application/CVRP/CVRP/include/cutting/: cuts.hpp  get_rank1_matrix.hpp  robust_control.hpp
Application/CVRP/CVRP/include/cvrp/: branching_node.hpp  cvrp.hpp
Application/CVRP/CVRP/include/deluxing/: deluxing.hpp  deluxing_kmeans.hpp
Application/CVRP/CVRP/include/heuristic/: heuristic.hpp
Application/CVRP/CVRP/include/machine_learning/: machine_learning.hpp  predict.hpp  train.hpp
Application/CVRP/CVRP/include/pricing_dual/: combine_faster_smoothing.hpp  dual_smoothing.hpp  dual_trial.hpp  faster_dual.hpp  heavier_heuristic.hpp  label.hpp  lighter_heuristic.hpp  template_functors.hpp
Application/CVRP/CVRP/include/rank1_cuts_separation/: rank1_cuts_separator.hpp
Application/CVRP/CVRP/include/read_instance_data/: instance_data.hpp
Application/CVRP/CVRP/include/solver_interface/: solver.hpp  solver_cplex.hpp  solver_grb.hpp  solver_mindopt.hpp
Application/CVRP/CVRP/include/test_dual/: read_dual_sol.hpp
Application/CVRP/CVRP/include/two_stage_solution/: read_enumeration_tree.hpp  read_node_in.hpp  (+2 more)
Application/CVRP/CVRP/package/: FindCPLEX.cmake  FindGUROBI.cmake  FindHGS.cmake
Application/CVRP/CVRP/src/: BBNODE.cpp  CONFIG.cpp  CVRP.cpp  Config.cpp  Experiment.cpp  InstanceData.cpp  ML.cpp  ML2.cpp  ML3.cpp  NominalBranching.cpp  SB_MemSave.cpp  VRPTW.cpp  add_branching_cut.cpp  branch_highLevel.cpp  branch_phase0.cpp  branch_phase2.cpp  branching_highLevel.cpp  branching_node.cpp  branching_phase0.cpp  branching_phase1.cpp  branching_phase2.cpp  branching_testing_mode2.cpp  branching_testing_mode3.cpp  branching_testing_mode4.cpp  deluxing.cpp  doSB.cpp  drawBBTgraph.cpp  eliminateArcs.cpp  enumerateMIP.cpp  exactLabeling.cpp  generateCrazyCut.cpp  heavierHeuristic.cpp  initialBucketGraph.cpp  lighterHeuristic.cpp  main.cpp  mar_27_branching.cpp  monitorMem.cpp  new.cpp  printMessage.cpp  readEnumerationTrees.cpp  (+6 more)
(+2029 files in other folders)
